src/test/deca/context/invalid/created/sans_objet/type_non_declaree.deca
// Description:
//    identificateur non declaré
//
// Resultats:
//    Ligne 12: type non declaré
// 
// Historique:
//    cree le 01/01/2024

{
   //doit generer une erreur
   into a;
  
}
